Pound -- history of user-visible changes. 2025-10-18
See the end of file for copying conditions.

Pound is a continuation of the software originally developed by
Robert Segall at Apsis GmbH, which was officially discontinued
on 2022-09-19.  See the README file for details.

Please send pound bug reports to <gray@gnu.org>

Version 4.17.91 (git)

* Emacs mode for editing pound configuration files

The major mode for GNU Emacs is implemented in file src/pound-mode.el.
Its installation and usage is covered by Chapter 11 of the Pound Manual,
entitled "Emacs Major Mode".

* Include statement accepts globbing patterns

* New configuration statement: LineBufferSize

Sets the line buffer size.  Line buffer is used when reading request
line, backend response status line, and header fields in both requests
and responses.  Thus, this value limits the maximum length allowed for
these parts of HTTP messages.  By default, it is set to the internal
buffer size (4096), which is also its minimum allowed value.

This statement can be used in global scope and within ListenHTTP
(ListenHTTPS) sections.

* TBF statement

This is a conditional statement that implements token bucket filter.
Its arguments are: the id of the buffer (a string, subject to to
backreference expansion and request accessor interpretation), maximum
allowed rate (requests per second) and a burst size (number of
requests).  The statement evaluates to true if the token bucket accepts
the request and to false otherwise.

* New request accessor: remoteip

%[remoteip 0]  expands to the real originator IP;
%[remoteip 1]  expands to the IP determined from the X-Forwarded-For
               (or similar) header.

* Originator IP for ACL matching

By default, ACLs are applied to the IP address from which the request
was received.  It is now possible to use the IP obtained from X-Forwarded-For 
instead.  To do so, use the -forwarded optional keyword, e.g.:

   ACL -forwarded -file "acl.lst"
